--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ h2 {
 h3, 
 p,
 li {
-    color: green;
+    color: black);
 }
 
 img {
@@ -29,12 +29,19 @@ main {
 
 nav {
     background-color: beige;
-    padding: 10px;
+    padding: 15px 15px;
+    text-align: center;
+    text-decoration: none;
 }
 
 nav ul {
     list-style-type: none;
     text-align: center;
+    list-style-type : none;
+    margin : 0;
+    padding : 0;
+    overflow : hidden;
+    background-color : beige);
 }
 
 nav li {
@@ -59,12 +66,15 @@ nav a:hover {
 }
 
 #banner img {
-    width: 60%;
-    height: auto;
+    background-color: beige;
+    padding: 15px 15px;
+    text-align: center;
+    text-decoration: none;
 }
 
 .service {
     display: inline-block;
+    text-align: center;
     background-color: white;
     border: 5px solid green;
     border-radius: 5px;
